@@ -2,6 +2,7 @@
     new spacefm-installer replaces self-extrct and install #571
     README rewritten and manual updated for new installer #571
     ifdef malloc_trim for non GlibC libraries #574
+    fix HAL build #576; fix older GTK2 build
 1.0.3   2015-08-26:
     add Devices|Settings|Auto-Mount|Mount Dirs option #548
     proto hand keep %a for lxterminal urxvtc konsole gnome-terminal #552
